Changed encryptor